--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>A collection of configuration files and scripts that I use to customize my development environment.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Repository</a></li>
+										<li><a href="https://github.com/ColinHenkel/dotfiles" class="button">Repository</a></li>
 									</ul>
 								</article>
 							</section>
