--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<h3>⚙️ Development skills:</h3>
 							<p>
 								<a href="https://skillicons.dev">
-									<img src="https://skillicons.dev/icons?i=arch,bash,mysql,c,cs,cpp,java,kotlin,php,neovim" alt="My Skills">
+									<img src="https://skillicons.dev/icons?i=mongodb,bash,mysql,c,cs,cpp,java,kotlin,php" alt="My Skills">
 								</a>
 							</p>
 						</section>
