--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<h1>About me</h1>
 							<p>I'm Colin Henkel, a <strong>Computer Science</strong> major at the <strong>University of Central Florida!</strong></p>
 
-							<h3>✍️ Currently learning:</h3>
+							<h3>✍️ Currently studying:</h3>
 							<ul>
 								<li>Software Development</li>
 								<li>Computer Science Theory</li>
@@ -76,7 +76,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">My Uni Work</a></h2>
+										<h2><a href="#">Uni Work</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>All programming and development files from my work at University.</p>
@@ -86,7 +86,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">My dotfiles</a></h2>
+										<h2><a href="#">Dotfiles</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>A collection of configuration files and scripts that I use to customize my development environment.</p>
