--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/colin-henkel-ba84522b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/ColinHenkel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
