--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -14,6 +9,23 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
+    <style>
+        /* Inline styles for white background */
+        #resume-container {
+            background-color: #ffffff;
+            padding: 2rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 80%;
+            margin: 2rem auto;
+            border-radius: 8px;
+        }
+
+        embed {
+            width: 100%;
+            height: 80vh;
+            border: none;
+        }
+    </style>
 </head>
 
 <body class="is-preload">
@@ -33,18 +45,18 @@
                 <li class="active"><a href="resume.html">Resume</a></li>
             </ul>
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span
-                            class="label">LinkedIn</span></a></li>
-                <li><a href="https://github.com/ColinHenkel" class="icon brands fa-github"><span
-                            class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/ColinHenkel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
 
         <!-- Main -->
         <div id="main">
-
-
-
+            <!-- Resume Container -->
+            <div id="resume-container">
+                <!-- Embed PDF -->
+                <embed src="assets/resume.pdf" type="application/pdf" />
+            </div>
         </div>
 
         <!-- Scripts -->
@@ -56,6 +68,7 @@
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
 
+    </div>
 </body>
 
 </html>
