--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
         /* Inline styles for white background */
         #resume-container {
             background-color: #ffffff;
+            padding: 2rem;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             max-width: 80%;
             border-radius: 8px;
