--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,12 @@
         /* Inline styles for white background */
         #resume-container {
             background-color: #ffffff;
+            margin-top: 0;
             padding: 2rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             max-width: 80%;
             border-radius: 8px;
         }
@@ -23,6 +27,7 @@
             width: 100%;
             height: 80vh;
             border: none;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
