--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,7 @@
         #resume-container {
             background-color: #ffffff;
             margin-top: 0;
+            margin-left: 2rem auto;
             padding: 2rem;
             display: flex;
             justify-content: center;
