--- a/resume.html
+++ b/resume.html
@@ -15,11 +15,8 @@
             background-color: #ffffff;
             margin-top: 0;
             margin-left: 2rem auto;
+            margin-right: 2rem auto;
             padding: 2rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
             max-width: 80%;
             border-radius: 8px;
         }
