--- a/resume.html
+++ b/resume.html
@@ -13,9 +13,8 @@
         /* Inline styles for white background */
         #resume-container {
             background-color: #ffffff;
+            margin: 2rem auto;
             margin-top: 0;
-            margin-left: 2rem auto;
-            margin-right: 2rem auto;
             padding: 2rem;
             max-width: 80%;
             border-radius: 8px;
