--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="projects">Projects</a></li>
-							<li><a href="resume">Resume</a></li>
+							<li class="active"><a href="projects.html">Projects</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
