--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Dotfiles</a></h2>
+										<h2><a href="#">Fitness Tracker</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>A collection of configuration files and scripts that I use to customize my development environment.</p>
+									<a href="#" class="image fit"><img src="images/pic04.png" alt="" /></a>
+									<p>A Fitness Tracking app for Processes for Object-Oriented Software Development using a MERN stack.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/ColinHenkel/dotfiles" class="button">Repository</a></li>
+										<li><a href="https://github.com/ColinHenkel/FitnessTrackerApp" class="button">Repository</a></li>
 									</ul>
 								</article>
 							</section>
