Update about portion

--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
 
 							<h3>⚙️ Development skills:</h3>
 							<p>
-								<a href="https://skillicons.dev">
-									<img src="https://skillicons.dev/icons?i=mongodb,bash,mysql,c,cs,cpp,java,kotlin,php" alt="My Skills">
-								</a>
+								<strong>Programming Languages:</strong> 
+								<code>C</code> | <code>C#</code> | <code>C++</code> | <code>Java</code> | 
+								<code>Kotlin</code> | <code>Python</code> | <code>SQL</code> | 
+								<code>PHP</code> | <code>JSON</code> | <code>JS</code>
 							</p>
+							<p>
+								<strong>Technologies:</strong> 
+								<code>AWS</code> | <code>Linux</code> | <code>MongoDB</code> | 
+								<code>MySQL</code> | <code>MariaDB</code> | <code>ReactJS</code>
+							</p>							
 						</section>
 
 						<!-- Posts -->
