--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
             <!-- Resume Container -->
             <div id="resume-container">
                 <!-- Embed PDF -->
-                <embed src="assets/resume.pdf" type="application/pdf" />
+                <embed src="assets/Resume.pdf" type="application/pdf" />
             </div>
         </div>
 
