Add script to projects html

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 							<h1>About me</h1>
 							<p>I'm Colin Henkel, a <strong>Computer Science</strong> major at the <strong>University of Central Florida!</strong></p>
 
-							<h3>✍️ Currently studying:</h3>
+							<h3>Currently studying:</h3>
 							<ul>
 								<li>Software Development</li>
 								<li>Computer Science Theory</li>
 								<li>Backend Development</li>
 							</ul>
 
-							<h3>⚙️ Development skills:</h3>
+							<h3>Development skills:</h3>
 
 							<a href="https://skillicons.dev">
 							  <img 
