Attempt at removing gap between icons and languages text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</ul>
 
 							<h3>Development skills:</h3>
-							<p><strong>Programming Languages:</strong></p>
+							<strong>Languages</strong>
 								<div class="skills-icons">
 									<!-- C -->
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" fill="#212931">
