--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <style>
         /* Inline styles for white background */
         #resume-container {
-            background-color: #ffffff;
+            background-color: #0c0e0f;
             margin: 2rem auto;
             margin-top: 0;
             padding: 2rem;
