--- a/resume.html
+++ b/resume.html
@@ -35,13 +35,18 @@
     <div id="wrapper">
 
         <!-- Header -->
-        <header id="header">
-            <a href="index.html" class="logo">Resume</a>
-        </header>
+        <div id="intro">
+            <h1>Resume</h1>
+            <p>Embedded PDF of my Resume.</p>
+            <ul class="actions">
+                <li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+            </ul>
+        </div>
 
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
+                <li><a href="/about">About</a></li>
                 <li><a href="/projects">Projects</a></li>
                 <li class="active"><a href="/resume">Resume</a></li>
             </ul>
