--- a/resume.html
+++ b/resume.html
@@ -46,9 +46,9 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="/about">About</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li class="active"><a href="/resume">Resume</a></li>
+                <li><a href="/about#nav">About</a></li>
+                <li><a href="/projects#nav">Projects</a></li>
+                <li class="active"><a href="/resume#nav">Resume</a></li>
             </ul>
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
