--- a/about.html
+++ b/about.html
@@ -18,22 +18,22 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
+					<!-- <div id="intro">
 						<h1>Colin Henkel<br />
 						Personal Portfolio</h1>
 						<p>Software engineer and Computer Science student at the University of Central Florida.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
-					</div>
+					</div> -->
 
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="/about#nav">About</a></li>
-							<li><a href="/projects#nav">Projects</a></li>
-							<li><a href="/resume#nav">Resume</a></li>
+							<li class="active"><a href="/about">About</a></li>
+							<li><a href="/projects">Projects</a></li>
+							<li><a href="/resume">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
