--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="/about">About</a></li>
-							<li><a href="/projects#nav">Projects</a></li>
-							<li><a href="/resume#nav">Resume</a></li>
+							<li><a href="/projects">Projects</a></li>
+							<li><a href="/resume">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
