--- a/projects.html
+++ b/projects.html
@@ -18,21 +18,21 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
+					<!-- <div id="intro">
 						<h1>Project Portfolio</h1>
 						<p>A collection of all my personal, school, and club projects.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
-					</div>
+					</div> -->
 
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="/about#nav">About</a></li>
-							<li class="active"><a href="/projects#nav">Projects</a></li>
-							<li><a href="/resume#nav">Resume</a></li>
+							<li><a href="/about">About</a></li>
+							<li class="active"><a href="/projects">Projects</a></li>
+							<li><a href="/resume">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
