--- a/resume.html
+++ b/resume.html
@@ -35,20 +35,20 @@
     <div id="wrapper">
 
         <!-- Header -->
-        <div id="intro">
+        <!-- <div id="intro">
             <h1>Resume</h1>
             <p>Embedded PDF of my Resume.</p>
             <ul class="actions">
                 <li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
             </ul>
-        </div>
+        </div> -->
 
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="/about#nav">About</a></li>
-                <li><a href="/projects#nav">Projects</a></li>
-                <li class="active"><a href="/resume#nav">Resume</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li class="active"><a href="/resume">Resume</a></li>
             </ul>
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/colin-henkel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
