Attempt two as last attempt removed nav bar

--- a/resume.html
+++ b/resume.html
@@ -35,13 +35,13 @@
     <div id="wrapper">
 
         <!-- Header -->
-        <!-- <div id="intro">
-            <h1>Resume</h1>
+        <div id="intro">
+            <!-- <h1>Resume</h1>
             <p>Embedded PDF of my Resume.</p>
             <ul class="actions">
                 <li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-            </ul>
-        </div> -->
+            </ul> -->
+        </div>
 
         <!-- Nav -->
         <nav id="nav">
