--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<!-- <div id="intro">
-						<h1>Colin Henkel<br />
+					<div id="intro">
+						<!-- <h1>Colin Henkel<br />
 						Personal Portfolio</h1>
 						<p>Software engineer and Computer Science student at the University of Central Florida.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div> -->
+						</ul> -->
+					</div>
 
 
 				<!-- Nav -->
