--- a/projects.html
+++ b/projects.html
@@ -18,13 +18,13 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<!-- <div id="intro">
-						<h1>Project Portfolio</h1>
+					<div id="intro">
+						<!-- <h1>Project Portfolio</h1>
 						<p>A collection of all my personal, school, and club projects.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div> -->
+						</ul> -->
+					</div>
 
 
 				<!-- Nav -->
