Add custom styling to html to keep nav tab

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
+					<div id="intro" style="padding: 0rem 0rem 0rem 0rem; min-height: 20vh;">
 						<!-- <h1>Colin Henkel<br />
 						Personal Portfolio</h1>
 						<p>Software engineer and Computer Science student at the University of Central Florida.</p>
