--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
     <div id="wrapper">
 
         <!-- Header -->
-        <div id="intro">
+        <div id="intro" style="padding: 0rem 0rem 0rem 0rem; min-height: 20vh;">
             <!-- <h1>Resume</h1>
             <p>Embedded PDF of my Resume.</p>
             <ul class="actions">
