--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
+					<div id="intro" style="padding: 0rem 0rem 0rem 0rem; min-height: 20vh;">
 						<!-- <h1>Project Portfolio</h1>
 						<p>A collection of all my personal, school, and club projects.</p>
 						<ul class="actions">
