--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 						<section id="profile">
 							<h1>About me</h1>
 							<p>I'm Colin Henkel, a <strong>Computer Science</strong> major at the <strong>University of Central Florida!</strong>
-                            As of right now, my focus is on Backend development and I am cabaple of fulfilling all roles related to Backend.
+                            While I do classify myself as a Full-Stack developer, as of right now, my focus is on Backend development and I am cabaple of fulfilling all roles related to Backend.
                             However, although I specialize in Backend, I have competent knowledge of Frontend development as well.</p>
 
 							<h3>Currently studying:</h3>
 							<ul>
 								<li>Software Development</li>
 								<li>Computer Science Theory</li>
-								<li>Backend Development</li>
+								<li>Full-Stack Development</li>
 							</ul>
 
 							<h3>Development skills:</h3>
