Add uni event site

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 										<h2><a href="#">Contacts Manager</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>A Contact Manager for Processes for Object-Oriented Software Development using a LAMP Stack.</p>
+									<p>A Contact Manager for Processes for Object-Oriented Software Development using a LAMP stack.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ColinHenkel/OOSD-ContactsManager" class="button">Repository</a></li>
 									</ul>
@@ -63,6 +63,16 @@
 									<p>A Fitness Tracking app for Processes for Object-Oriented Software Development using a MERN stack.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ColinHenkel/FitnessTrackerApp" class="button">Repository</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">University Event Site</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/event.png" alt="" /></a>
+									<p>A simulated event forum with public events, private university events, and RSO events using a LAMP stack.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/ColinHenkel/UniEventSite" class="button">Repository</a></li>
 									</ul>
 								</article>
 							</section>
