--- a/about.html
+++ b/about.html
@@ -48,11 +48,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="portfolio.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/index">Home</a></li>
+          <li><a href="/about" class="active">About</a></li>
+          <li><a href="/resume">Resume</a></li>
+          <li><a href="/portfolio">Projects</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
